cluster-talos/kubernetes/apps/qbittorrent/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qbittorrent
  labels:
    k10.kasten.io/backup: "true"
